tests/NormalTests/paczka2/big_fuzzy/65405045.err
Error in line 7: r39GJgfd3p A27\ 99,1
Error in line 4: mZGV1hrv8 S965 25,4
Error in line 14: LtehTgKES9 S236 94,9
Error in line 12: VY5r3R S236 79,8
Error in line 5: r39GJgfd3p S965 95,8
Error in line 21: r39GJgfd3p A276 141,7
Error in line 22: r39GJgfd3p S236 81,6
Error in line 20: mZGV1hrv8 A818 73,5
Error in line 30: mZGV1hrv8 S965 75,1
Error in line 29: S236 S236 52,0
Error in line 41: S236 S965 5,5
Error in line 43: kjYDHEg S965 85,0
Error in line 48: r39GJgfd3p A818 96,7
Error in line 56: kjYDHEg S236 0,0
Error in line 68: S236 S236 4,89
Error in line 69: VY5r3R S965 110,4
Error in line 60: S236 A276 77,0
Error in line 99: r39GJgfd3p S965 84,1
Error in line 100: kjYDHEg S236 37,8
Error in line 110: VY5r3R S236 61,6
Error in line 117: d8Rm S236 54,2
Error in line 122: d8Rm A818 7,9
Error in line 123: d8Rm S965 37,8
Error in line 126: kjYDHEg A818 67,94
Error in line 107: kjYDHEg S965 84,5
Error in line 120: r39GJgfd3p A818 124,1
Error in line 133: r39GJgfd3p A276 0,5
Error in line 152: LtehTgKES9 S236 298,3
Error in line 154: VY5r3R A818 13,7
Error in line 174: mZGV1hrv8 A276 83,10
Error in line 176: r39GJgfd3p A818 73,7
Error in line 196: kjYDHEg S965 65,5
Error in line 206: S236 A276 57,0
Error in line 205: mZGV1hrv8 A276 359,5
Error in line 208: kjYDHEg S965 72,0
Error in line 214: mZGV1hrv8 S236 92,9
Error in line 225: mZGV1hrv8 A818 19,3
Error in line 229: mZGV1hrv8 S236 94,6
Error in line 233: mZGV1hrv8 A818 55,1
Error in line 230: d8Rm S965 15,1
Error in line 243: mZGV1hrv8 A276 60,9
Error in line 232: r39GJgfd3p A276 33,6
